# etching_pattern

./: README.md  main.py  pyproject.toml  requirements.txt  research.ipynb
data/processed/: surface_features_dataset.csv  surface_features_processed.csv  surface_features_selected_manual.csv
src/data/: dataset_creation.py  feature_engineering.py  image_processing.py
src/features/: feature_bruteforce.py  feature_bruteforce_simple.py  feature_selection.py
src/models/: models.py
src/visualization/: visualization.py
